apps/dssp-java-test/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-java-test
  namespace: dev
  labels:
    app: dssp-java-test
    backstage.io/kubernetes-id: dssp-java-test
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-java-test
  template:
    metadata:
      labels:
        app: dssp-java-test
        backstage.io/kubernetes-id: dssp-java-test
        environment: dev
    spec:
      containers:
        - name: dssp-java-test
          image: chaitanyapandeygspann/dssp-java-test:1.0.1
          ports:
            - containerPort: 8080
