apps/dssp-java-test/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-java-test
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-java-test
spec:
  selector:
    app: dssp-java-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
